# gcloud-reader

./: Cargo.toml
.github/workflows/: release.yml
src/: cli.rs  data.rs  lib.rs  main.rs
