[package]
name = "gcloud-reader"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
description = "gcloud log parser"
license = "BSL-1.0"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

repository = "https://github.com/DoumanAsh/gcloud-reader"
readme = "README.md"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies]
serde_json = "1"
arg = "0.4"
c-ffi = "0.4.6"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
