[package]
name = "gcloud-reader"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
description = "gcloud log parser"
license = "BSL-1.0"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

repository = "https://github.com/DoumanAsh/gcloud-reader"
readme = "README.md"

[dependencies]
serde_json = "1"
serde = "1"
serde_derive = "1"

[dependencies.arg]
version = "0.4"
features = ["std"]

[profile.release]
lto = 'thin'
opt-level = "z"
codegen-units = 1
strip = true
